tests/valid_inputs/cast_double_to_int.cpp
// test explicit cast of double to int

int main() {
	double d = 3.14;
	return (int) d;
}
