tests/invalid_inputs/sema/double_plus_equals_char.cpp
// c+- doesn't allow char->double conversion

int main() {
	double d = 3.14;
	d += 'c';
}
